--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formspree/react": "^3.0.0",
+    "@mailchimp/mailchimp_marketing": "^3.0.80",
     "next": "16.1.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
